--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-lodash": "^3.3.4",
+    "clean-webpack-plugin": "^2.0.0",
     "fs-extra": "^7.0.0",
     "http": "0.0.0",
     "inquirer": "^6.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "mustache": "^2.3.1",
     "readdirp": "^2.1.0",
-    "save-dev": "^2.0.0"
+    "save-dev": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.0",
@@ -44,7 +47,7 @@
     "idempotent-babel-polyfill": "^6.26.0",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "react-hot-loader": "^4.3.4",
