--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "inquirer": "^6.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mustache": "^2.3.1",
+    "path": "^0.12.7",
     "readdirp": "^2.1.0",
     "save-dev": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.0",
-    "aws-sdk": "^2.288.0",
+    "aws-sdk": "^2.429.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
@@ -38,7 +39,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
-    "edit-json-file": "^1.1.0",
+    "edit-json-file": "^1.2.1",
     "eslint": "^5.2.0",
     "eslint-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
