--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forcemanager-cli",
-  "version": "0.0.1-alpha.8",
+  "version": "0.0.1-alpha.9",
   "license": "MIT",
   "author": "SPT <sergi.palau@forcemanager.net>",
   "scripts": {
@@ -9,10 +9,11 @@
   },
   "private": false,
   "dependencies": {
+    "aws-sdk": "^2.435.0",
     "axios": "^0.18.0",
-    "aws-sdk": "^2.429.0",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^2.0.0",
+    "dotenv": "^7.0.0",
     "edit-json-file": "^1.2.1",
     "fs-extra": "^7.0.0",
     "http": "0.0.0",
@@ -21,6 +22,7 @@
     "mustache": "^2.3.1",
     "path": "^0.12.7",
     "readdirp": "^2.1.0",
+    "save": "^2.3.3",
     "save-dev": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.1.2"
   },
@@ -39,7 +41,6 @@
     "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "dotenv": "^6.0.0",
     "eslint": "^5.2.0",
     "eslint-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
