--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forcemanager-cli",
-  "version": "0.0.1-alpha.11",
+  "version": "0.0.1-alpha.12",
   "license": "MIT",
   "author": "SPT <sergi.palau@forcemanager.net>",
   "scripts": {
@@ -20,6 +20,7 @@
     "inquirer": "^6.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mustache": "^2.3.1",
+    "open": "^6.0.0",
     "path": "^0.12.7",
     "readdirp": "^2.1.0",
     "save": "^2.3.3",
