--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
         "browser": true,
         "node": true
     },
-    "extends": ["prettier", "prettier/react", "plugin:jest/recommended"],
+    "extends": ["prettier"],
     "rules": {
         "prettier/prettier": "error",
         "curly": 0,
@@ -25,26 +25,9 @@
         "space-infix-ops": 0,
         "consistent-return": 0,
         "strict": 0,
-        "react/prefer-es6-class": 1,
-        "react/prefer-stateless-function": 1,
-        "react/no-did-mount-set-state": 0,
-        "react/no-did-update-set-state": 0,
-        "react/no-direct-mutation-state": 1,
-        "react/no-typos": 0,
-        "react/react-in-jsx-scope": 0,
-        "react/jsx-closing-bracket-location": 0,
-        "react/jsx-closing-tag-location": 0,
-        "react/jsx-indent": 0,
-        "react/jsx-indent-props": 0,
-        "react/jsx-no-bind": 0,
-        "react/jsx-no-duplicate-props": 1,
         "jest/valid-expect": 0
     },
     "settings": {
-        "react": {
-            "pragma": "React",
-            "version": "16.6"
-        },
         "propWrapperFunctions": [
             "forbidExtraProps",
             {
@@ -67,10 +50,7 @@
     },
     "parser": "babel-eslint",
     "parserOptions": {
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
+        "sourceType": "module"
     },
-    "plugins": ["react", "prettier", "jest"]
+    "plugins": ["prettier"]
 }
