--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "forcemanager-cli",
-  "version": "0.0.1-alpha.19",
+  "version": "0.0.1-beta.1",
+  "description": "ForceManager CLI",
+  "homepage": "https://github.com/ForceManager/forcemanager-cli",
+  "bugs": {
+    "url": "https://github.com/ForceManager/forcemanager-cli/issues"
+  },
   "license": "MIT",
   "author": "SPT <sergi.palau@forcemanager.net>",
-  "private": false,
+  "bin": {
+    "fm-cli": "./cli.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ForceManager/forcemanager-cli.git"
+  },
   "dependencies": {
     "aws-sdk": "^2.435.0",
     "axios": "^0.18.0",
@@ -25,12 +36,5 @@
   },
   "devDependencies": {
   },
-  "description": "ForceManager CLI",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:ForceManager/forcemanager-cli.git"
-  },
-  "bin": {
-    "fm-cli": "./cli.js"
-  }
+  "private": false
 }
