--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git@github.com:ForceManager/forcemanager-cli.git"
   },
   "dependencies": {
+    "archiver": "^3.0.0",
     "aws-sdk": "^2.435.0",
     "axios": "^0.18.0",
     "babel-plugin-lodash": "^3.3.4",
