--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forcemanager-cli",
-  "version": "0.0.1-beta.6",
+  "version": "0.0.1-beta.7",
   "description": "ForceManager CLI",
   "homepage": "https://github.com/ForceManager/forcemanager-cli",
   "bugs": {
@@ -19,23 +19,15 @@
     "archiver": "^3.0.0",
     "aws-sdk": "^2.435.0",
     "axios": "^0.18.0",
-    "babel-plugin-lodash": "^3.3.4",
-    "clean-webpack-plugin": "^2.0.0",
     "dotenv": "^7.0.0",
     "edit-json-file": "^1.2.1",
     "fs-extra": "^7.0.0",
-    "http": "0.0.0",
     "inquirer": "^6.1.0",
     "mime-types": "^2.1.22",
-    "mini-css-extract-plugin": "^0.5.0",
     "mustache": "^2.3.1",
     "open": "^6.0.0",
     "path": "^0.12.7",
-    "readdirp": "^2.1.0",
-    "save": "^2.3.3",
-    "save-dev": "^2.0.0",
-    "uglifyjs-webpack-plugin": "^2.1.2"
+    "readdirp": "^2.1.0"
   },
-  "devDependencies": {},
   "private": false
 }
