--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forcemanager-cli",
-  "version": "0.0.1-beta.20",
+  "version": "0.0.1-beta.24",
   "description": "ForceManager CLI",
   "homepage": "https://github.com/ForceManager/forcemanager-cli",
   "bugs": {
@@ -15,29 +15,28 @@
     "type": "git",
     "url": "git@github.com:ForceManager/forcemanager-cli.git"
   },
-  "dependencies": {
-    "archiver": "^3.1.1",
-    "aws-sdk": "^2.435.0",
-    "axios": "^0.18.0",
-    "dotenv": "^7.0.0",
-    "download-git-repo": "^3.0.2",
-    "edit-json-file": "^1.2.1",
-    "envfile": "^3.0.0",
-    "fs-extra": "^7.0.0",
-    "inquirer": "^6.1.0",
-    "mime-types": "^2.1.22",
-    "mustache": "^2.3.1",
-    "open": "^6.0.0",
-    "path": "^0.12.7",
-    "readdirp": "^2.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.0.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2"
+    "archiver": "^4.0.1",
+    "aws-sdk": "^2.657.0",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
+    "download-git-repo": "^3.0.2",
+    "edit-json-file": "^1.4.0",
+    "envfile": "^5.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "fs-extra": "^9.0.0",
+    "inquirer": "^7.1.0",
+    "mime-types": "^2.1.26",
+    "mustache": "^4.0.1",
+    "open": "^7.0.3",
+    "path": "^0.12.7",
+    "prettier": "^2.0.4",
+    "readdirp": "^3.4.0"
   },
   "private": false
 }
